clusters/talos-cluster/docker-registry/registry-api-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry-api-route
  namespace: registry
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "docker.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: docker-registry
          port: 5000
